# demo-day

./: .env.example  .gitignore  AGENTS.md  JOURNAL.md  README.md  WORKLOG.md  feature_list.json  init.sh  progress.md  session-handoff.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  ai_safety.py  main.py  observability.py  openapi_contract.py
backend/app/audit/: __init__.py  ports.py  repositories.py  schemas.py
backend/app/auth/: __init__.py  demo.py  dependencies.py  ports.py  repositories.py  routes.py  schemas.py  services.py  supabase_client.py
backend/app/core/: config.py  errors.py  security.py  time.py
backend/app/exports/: __init__.py  ports.py  repositories.py  schemas.py
backend/app/jobs/: __init__.py  ports.py  repositories.py  routes.py  (+2 more)
backend/scripts/: bootstrap_real_accounts.py  ingest_books.py
backend/tests/: conftest.py  test_admin_fullstack_surfaces.py  test_ai_outline.py  test_ai_rate_guard.py  test_ai_safety.py  test_audit_module_boundaries.py  test_audit_persistence.py  test_auth.py  test_auth_module_boundaries.py  test_content_persistence.py  test_core_helpers.py  test_frontend_backend_contract.py  test_generation_jobs.py  test_health.py  test_jobs_module_boundaries.py  test_knowledge_module_boundaries.py  test_knowledge_rag.py  test_learning.py  test_learning_module_boundaries.py  test_learning_persistence.py  test_lesson_blocks.py  test_lesson_exports.py  test_observability.py  test_openapi_contract.py  test_progress_module_boundaries.py  test_real_account_bootstrap.py  test_student_progress.py  test_student_study.py
(+235 files in other folders)
