[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.138.1",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
